--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+   overflow-y: scroll; 
+  }
+
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: rgb(0,125,255);
